add menuon header and create events component

--- a/src/container/Header/Header.scss
+++ b/src/container/Header/Header.scss
@@ -1,7 +1,4 @@
 .app-bar{
     background-color: whitesmoke;
-    &-logo{
-        width: 100px;
-        height: 100px;
-    }
+    color: black;
 }
