--- a/src/container/Header/Header.scss
+++ b/src/container/Header/Header.scss
@@ -1,4 +1,5 @@
 .app-bar{
-    background-color: whitesmoke;
-    color: black;
+    background-color: #333;
+    color: whitesmoke;
+    opacity: 0.8;
 }
