--- a/src/components/Slider/Slider.scss
+++ b/src/components/Slider/Slider.scss
@@ -2,14 +2,48 @@
     position: relative;
     img{
         width: 100%;
-        height: auto;
-        border-radius: 20px;
+        height: 90vh;
+        display: block;
     }
-    h3{
+    .slide-description {
         position: absolute;
         color: whitesmoke;
         top: 50px;
-        left: 20px;
-        font-size: 30px;
+        left: 50px;
+        h3{
+            font-size: 40px;
+        }
+        p{
+            font-size: 30px;
+        }
     }
 }
+.swiper-pagination-bullet {
+    width: 20px;
+    height: 20px;
+    opacity: 0.4;
+    background: #333;
+    &:hover{
+        background: whitesmoke;
+        opacity: 0.2;
+    }
+  }
+  .swiper-pagination-bullet-active {
+    background: whitesmoke;
+    &:hover{
+        opacity: 1;
+    }
+  }
+  .swiper-button-prev, .swiper-button-next {
+    border-radius:50%;
+    width: 60px;
+    height: 60px;
+    opacity: 0.4;
+    color: whitesmoke;
+
+    &:hover{
+        opacity: 1;
+        background: #333;
+        border: 1px solid whitesmoke;
+    }
+  }
