--- a/src/components/PostsList/PostsList.scss
+++ b/src/components/PostsList/PostsList.scss
@@ -1,7 +1,3 @@
-.posts-container{
-    margin-top: 50px;
-}
-
 .post-image img{
     width: 100%;
     height: 200px;
@@ -10,11 +6,13 @@
     color: whitesmoke;
     background: #333;
     opacity: 0.8;
+    transition: all 0.5s ease;
     &:hover{
         color: whitesmoke;
         background: #333;
         opacity: 1;
-        transition: all 0.3s ease;
+        transform: scale(1.2);
+        transition: all 0.5s ease;
     }
 }
 .post-date{
