--- a/src/components/MenuIcons/MenuIcons.scss
+++ b/src/components/MenuIcons/MenuIcons.scss
@@ -3,9 +3,12 @@
     display: flex;
     align-items: center;
     gap: 10px;
+    a{
+        color: whitesmoke;
+    }
     .icon-fb{
         &:hover{
-            color: blue;
+            color: rgb(56, 56, 216);
             transition: all .3s ease;
         }
     }
