--- a/src/container/App/App.scss
+++ b/src/container/App/App.scss
@@ -1,2 +1,8 @@
 $dark-color: #333;
 $light-color:#f5f5f5;
+.app{
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
