--- a/src/pages/Contacts/Contacts.scss
+++ b/src/pages/Contacts/Contacts.scss
@@ -1,9 +1,19 @@
-.contacts{
+.contacts-list{
     list-style: none;
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: left;
     li{
         font-style: italic;
         font-size: 20px;
         margin-top: 30px;
+        color: whitesmoke;
     }
+}
+.contacts{
+    margin-top: 40px;
+    display: flex;
+    background-color: #333;
+
 }
