--- a/src/components/PostsList/PostsList.scss
+++ b/src/components/PostsList/PostsList.scss
@@ -1,23 +1,9 @@
+.posts-container{
+    margin-bottom: 30px;
+}
 .post-image img{
     width: 100%;
     height: 200px;
-}
-.post-button{
-    background: #333;
-    opacity: 0.8;
-    transition: all 0.5s ease;
-    a{
-        color: whitesmoke;
-        text-decoration: none;
-    }
-    &:hover{
-        color: whitesmoke;
-        background: #333;
-        opacity: 1;
-        text-decoration:underline;
-        transform: scale(1.2);
-        transition: all 0.5s ease;
-    }
 }
 .post-date{
     font-style: italic;
