add thumb on post

--- a/src/components/PostsList/PostsList.scss
+++ b/src/components/PostsList/PostsList.scss
@@ -10,3 +10,10 @@
     display:flex;
     justify-content: space-between;
 }
+.action-btns{
+    display: flex;
+    justify-content: space-between;
+}
+.thumb{
+    color: #333;
+}
