--- a/src/components/LinkButton/LinkButton.scss
+++ b/src/components/LinkButton/LinkButton.scss
@@ -1,16 +1,17 @@
 .link-button{
-    background: #333;
-    opacity: 0.8;
+    color: #333;
     transition: all 0.5s ease;
     a{
-        color: whitesmoke;
+        color: #333;
         text-decoration: none;
+        &:hover{
+            color:whitesmoke;
+            text-decoration:underline;
+        }
     }
     &:hover{
         color: whitesmoke;
         background: #333;
-        opacity: 1;
-        text-decoration:underline;
         transform: scale(1.2);
         transition: all 0.5s ease;
     }
