--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -1,23 +1,50 @@
 .btn-dona{
     margin-left: 50px;
-    background-color: rgb(241, 62, 62);
+    background: linear-gradient(120deg, rgba(33,162,255,1) 35%, rgba(245,239,7,1) 65%);
+    animation: wiggle 2s linear infinite;
     transition: all .5s ease;
-    opacity: 0.6;
     a{
         text-decoration: none;
         color: #333;
     }
     &:hover{
-        background-color:red;
-        transform: scale(1.5);
+        background: linear-gradient(120deg,rgba(245,239,7,1) 35%,rgba(33,162,255,1) 65%);
         transition: all .5s ease;
     }
 }
 .menu-item-active{
     text-decoration: none;
-    color: yellowgreen;
+    color: #F5EF07;
 }
 .menu-item{
     text-decoration: none;
     color:whitesmoke;
 }
+.MuiMenu-paper{
+    background-color: transparent;
+}
+@keyframes wiggle {
+    0%, 7% {
+      transform: rotateZ(0);
+      scale: 1.2;
+    }
+    15% {
+      transform: rotateZ(-15deg);
+    }
+    20% {
+      transform: rotateZ(10deg);
+    }
+    25% {
+      transform: rotateZ(-10deg);
+    }
+    30% {
+      transform: rotateZ(6deg);
+    }
+    35% {
+      transform: rotateZ(-4deg);
+    }
+    40%, 100% {
+      transform: rotateZ(0);
+    }
+  }
+  
