--- a/src/components/PostsList/PostsList.scss
+++ b/src/components/PostsList/PostsList.scss
@@ -4,6 +4,12 @@
 .post-image img{
     width: 100%;
     height: 200px;
+    transition: all .5s ease;
+    &:hover{
+        cursor: pointer;
+        transform: scale(1.1);
+        transition: all .5s ease;
+    }
 }
 .post-date{
     font-style: italic;
@@ -16,4 +22,8 @@
 }
 .thumb{
     color: #333;
+    background: linear-gradient(180deg, rgba(33,162,255,1) 35%, rgba(245,239,7,1) 65%);
+    border-radius: 50%;
+    min-width: 30px;
+    height: 30px;
 }
