--- a/src/container/App/App.scss
+++ b/src/container/App/App.scss
@@ -5,4 +5,5 @@ $light-color:#f5f5f5;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    background: linear-gradient(180deg, rgba(33,162,255,1) 35%, rgba(245,239,7,1) 65%);
 }
