--- a/src/components/ProductsList/ProductsList.scss
+++ b/src/components/ProductsList/ProductsList.scss
@@ -1,22 +1,40 @@
 .product-card{
-    display: flex;
     .card-image {
-        flex: 20%;
-        display: flex;
-        justify-content: center;
         img{
-            height: 150px;
+            max-height: 150px;
             object-fit: contain;
         }
     }
     .card-content{
-        flex: 80%;
         &-title{
             font-weight: bold;
             font-size: 24px;
+            a{
+                text-decoration: none;
+                color: black;
+            }
         }
         &-description{
             font-style: italic;
         }
+        &-price{
+            span{
+                font-style: italic;
+                font-weight: bold;
+            }
+        }
     }
+}
+.add-btn{
+    visibility: hidden;
+    transition: all .2s ease;
+}
+.card:hover{
+    .add-btn{
+        visibility: visible;
+        transition: all .2s ease;
+    }
+}
+.like-btn{
+    float: right;
 }
