--- a/src/components/ContactsDetails/ContactsDetails.scss
+++ b/src/components/ContactsDetails/ContactsDetails.scss
@@ -11,4 +11,25 @@
         margin-top: 30px;
         color: #333;
     }
+    
+}
+.email a{
+    &:hover{
+        color: rgb(50, 168, 252);
+    }
+}
+
+.footer-list{
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    padding: 0;
+    a{
+        text-decoration: none;
+        font-style: italic;
+        font-size: 16px;
+        margin-top: 30px;
+        color: whitesmoke;
+    }
 }
