--- a/src/components/CartHeader/CartHeader.scss
+++ b/src/components/CartHeader/CartHeader.scss
@@ -1,3 +1,4 @@
+@import "../../assets/styles/variables.scss";
 .cart{
     position: relative;
     &-count{
@@ -8,6 +9,6 @@
         width: 20px;
         height: 20px;
         border-radius: 50%;
-        background-color: whitesmoke;
+        background-color: $light-color;
     }
 }
