--- a/src/container/App/App.scss
+++ b/src/container/App/App.scss
@@ -1,9 +1,9 @@
-$dark-color: #333;
-$light-color:#f5f5f5;
+@import "../../assets/styles/variables.scss";
+
 .app{
     min-height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    background: linear-gradient(180deg, rgb(50, 168, 252) 35%, rgba(245,239,7,1) 65%);
+    background: $background-primary;
 }
