--- a/src/assets/styles/_mixins.scss
+++ b/src/assets/styles/_mixins.scss
@@ -2,6 +2,10 @@
     transition: all .5s ease;
 }
 
+@mixin shadow-mixin{
+  box-shadow: 10px 10px 10px 3px #333;
+}
+
 @mixin animation-mixin-wiggle{
     animation: wiggle 2s linear infinite;
     @keyframes wiggle {
