--- a/src/components/Slider/Slider.scss
+++ b/src/components/Slider/Slider.scss
@@ -51,3 +51,9 @@
         @include mixins.transition-mixin;
     }
   }
+
+  @media (max-width: $breakpoint-tablet) {
+    .swiper{
+        display:none;
+    }    
+  }
