--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -2,3 +2,5 @@ $dark-color: #333;
 $light-color:#f5f5f5;
 $background-primary: linear-gradient(180deg, rgb(50, 168, 252) 35%, rgba(245,239,7,1) 65%);
 $background-bts: linear-gradient(120deg, rgba(33,162,255,1) 35%, rgba(245,239,7,1) 65%);
+$breakpoint-tablet: 767px;
+$breakpoint-laptop: 1024px;
