--- a/src/components/LinkButton/LinkButton.scss
+++ b/src/components/LinkButton/LinkButton.scss
@@ -4,9 +4,13 @@
 .link-button{
     color: $dark-color;
     @include mixins.transition-mixin;
+    border-color: $dark-color;
     a{
         color: $dark-color;
         text-decoration: none;
+        @media (max-width: $breakpoint-laptop) {
+            font-size: 16px;
+      }
         &:hover{
             color: $light-color;
             text-decoration:underline;
