--- a/src/components/PageTitle/PageTitle.scss
+++ b/src/components/PageTitle/PageTitle.scss
@@ -1,3 +1,7 @@
+@import "../../assets/styles/variables.scss";
 .page-title{
     margin: 30px 0;
+    @media (max-width: $breakpoint-tablet) {
+            font-size: 24px;
+      }
 }
