--- a/src/components/PostsList/PostsList.scss
+++ b/src/components/PostsList/PostsList.scss
@@ -28,4 +28,8 @@
     border-radius: 50%;
     min-width: 30px;
     height: 30px;
+    @media (max-width: $breakpoint-laptop) {
+        min-width: 50px;
+        height: 50px;
+    }
 }
