--- a/src/components/MenuIcons/MenuIcons.scss
+++ b/src/components/MenuIcons/MenuIcons.scss
@@ -9,7 +9,7 @@
     }
     .icon-fb{
         &:hover{
-            color: rgb(50, 168, 252);
+            color: $blue-color;
             transition: all .3s ease;
         }
     }
