--- a/src/components/PostsList/PostsList.scss
+++ b/src/components/PostsList/PostsList.scss
@@ -3,9 +3,13 @@
 .posts-container{
     margin-bottom: 30px;
 }
+.post-title{
+    font-weight: bold;
+}
 .post-image img{
     width: 100%;
     height: 200px;
+    object-fit: contain;
     @include mixins.transition-mixin;
     &:hover{
         cursor: pointer;
